--- a/style.css
+++ b/style.css
@@ -3,6 +3,14 @@
   padding: 0;
   box-sizing: border-box;
 }
+ 
+nav a {
+      margin: 0 10px;
+      color: #3d3d3d;
+      text-decoration: none;
+      font-weight: bold;
+}
+
 
 body {
   font-family: 'Poppins', sans-serif;
