created a new folder to keep images

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ body {
 }
 
 .hero {
-  background-image: url('bg-hero.jpg');
+  background-image: url('images/bg-hero.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
